# pcre2.mbt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  moon.mod.json
cmake/: config.cmake.in  moonbit.cmake
scripts/: generate.py  prepare.py  publish.py
src/: .gitignore  moon.pkg.json  pcre2-16.mbt  pcre2-8.mbt  pcre2-api.mbt  pcre2-const.mbt  pcre2-info.mbt  pcre2.c  pcre2.mbt  pcre2.mbt.in  pcre2.mbti  pcre2_test.mbt  pkg.generated.mbti
test/: CMakeLists.txt  moon.mod.json
test/match/: CMakeLists.txt  main.mbt  moon.pkg.json
test/split/: CMakeLists.txt  main.mbt
